--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.16.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "6pp": "^1.2.16",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "gsap": "^3.12.5",
     "moment": "^2.30.1",
@@ -24,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
