contected frontend and backend through apis (i.e. search, addFriend, getChats)

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,7 @@ ADMIN_SECRET_KEY = aman
 NODE_ENV = DEVELOPMENT
 
 CLIENT_URL = 
+
+CLOUDINARY_CLOUD_NAME = dlo4pwt0d
+CLOUDINARY_API_KEY = 299438344176161
+CLOUDINARY_API_SECRET = BrjwEE56WPjOMuZN-u7HEv7trV8
