message send successfully

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "SET NODE_ENV=PRODUCTION && node app.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT && nodemon app.js"
+    "dev": "SET NODE_ENV=PRODUCTION && nodemon app.js"
   },
   "keywords": [],
   "author": "",
