--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-MONGO_URI = mongodb://127.0.0.1:27017
+MONGO_URI = mongodb+srv://chatBridge17:Aman__1234@chatbridge.nbhvc.mongodb.net/?retryWrites=true&w=majority&appName=chatBridge
+
+# MONGO_URI = mongodb://127.0.0.1:27017
 
 JWT_SECRET = armedTrex
 
